--- a/50-storage-management/04-sms-service/pom.xml
+++ b/50-storage-management/04-sms-service/pom.xml
@@ -195,12 +195,12 @@
 
     <repositories>
         <repository>
-            <id>github-01</id>
+            <id>isygo-it-github-01</id>
             <name>GitHub isygo-it Apache Maven Packages</name>
             <url>https://maven.pkg.github.com/isygo-dev/01-wams-stack</url>
         </repository>
         <repository>
-            <id>github-02</id>
+            <id>isygo-it-github-02</id>
             <name>GitHub isygo-it Apache Maven Packages</name>
             <url>https://maven.pkg.github.com/isygo-dev/02-wams-core</url>
         </repository>
