--- a/pom.xml
+++ b/pom.xml
@@ -51,7 +51,7 @@
 
     <distributionManagement>
         <repository>
-            <id>github</id>
+            <id>isygo-it-github-04</id>
             <name>GitHub isygo-it Apache Maven Packages</name>
             <url>https://maven.pkg.github.com/isygo-dev/04-wams-be</url>
         </repository>
