--- a/02-bu-services/70-recruitment-management/03-rpm-service/pom.xml
+++ b/02-bu-services/70-recruitment-management/03-rpm-service/pom.xml
@@ -9,13 +9,13 @@
 
     <groupId>eu.isygo-it.services</groupId>
     <artifactId>recruitment-management-service</artifactId>
-    <version>1.0.261112-S1046</version>
+    <version>1.0.271124-S0916</version>
     <packaging>jar</packaging>
 
     <parent>
         <groupId>eu.isygo-it.services</groupId>
         <artifactId>service-stack-parent</artifactId>
-        <version>1.0.261112-S1046</version>
+        <version>1.0.271124-S0916</version>
     </parent>
 
     <profiles>
@@ -91,63 +91,63 @@
         <dependency>
             <groupId>eu.isygo-it.services</groupId>
             <artifactId>recruitment-management-jpa</artifactId>
-            <version>1.0.261112-S1046</version>
+            <version>1.0.271124-S0916</version>
         </dependency>
         <dependency>
             <groupId>eu.isygo-it.services</groupId>
             <artifactId>process-management-jpa</artifactId>
-            <version>1.0.261112-S1046</version>
+            <version>1.0.271124-S0916</version>
         </dependency>
         <dependency>
             <groupId>eu.isygo-it.services</groupId>
             <artifactId>recruitment-management-shared</artifactId>
-            <version>1.0.261112-S1046</version>
+            <version>1.0.271124-S0916</version>
         </dependency>
         <dependency>
             <groupId>eu.isygo-it.services</groupId>
             <artifactId>process-management-shared</artifactId>
-            <version>1.0.261112-S1046</version>
+            <version>1.0.271124-S0916</version>
         </dependency>
         <dependency>
             <groupId>eu.isygo-it.services</groupId>
             <artifactId>quiz-management-shared</artifactId>
-            <version>1.0.261112-S1046</version>
+            <version>1.0.271124-S0916</version>
         </dependency>
         <dependency>
             <groupId>eu.isygo-it.services</groupId>
             <artifactId>service-stack-web</artifactId>
-            <version>1.0.261112-S1046</version>
+            <version>1.0.271124-S0916</version>
         </dependency>
         <dependency>
             <groupId>eu.isygo-it.services</groupId>
             <artifactId>key-management-shared</artifactId>
-            <version>1.0.261112-S1046</version>
+            <version>1.0.271124-S0916</version>
         </dependency>
         <dependency>
             <groupId>eu.isygo-it.services</groupId>
             <artifactId>service-stack-crypt</artifactId>
-            <version>1.0.261112-S1046</version>
+            <version>1.0.271124-S0916</version>
         </dependency>
         <dependency>
             <groupId>eu.isygo-it.services</groupId>
             <artifactId>document-management-shared</artifactId>
-            <version>1.0.261112-S1046</version>
+            <version>1.0.271124-S0916</version>
         </dependency>
         <dependency>
             <groupId>eu.isygo-it.services</groupId>
             <artifactId>identity-management-shared</artifactId>
-            <version>1.0.261112-S1046</version>
+            <version>1.0.271124-S0916</version>
         </dependency>
         <dependency>
             <groupId>eu.isygo-it.services</groupId>
             <artifactId>messaging-management-shared</artifactId>
-            <version>1.0.261112-S1046</version>
+            <version>1.0.271124-S0916</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>eu.isygo-it.services</groupId>
             <artifactId>calendar-management-shared</artifactId>
-            <version>1.0.261112-S1046</version>
+            <version>1.0.271124-S0916</version>
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/org.springframework.statemachine/spring-statemachine-core -->
@@ -222,7 +222,7 @@
                         <manifest>
                             <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
                             <addClasspath>true</addClasspath>
-                            <mainClass>eu.isygo-it.RpmStarter</mainClass>
+                            <mainClass>eu.isygoit.RpmStarter</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
@@ -233,7 +233,7 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <version>3.2.1</version>
                 <configuration>
-                    <mainClass>eu.isygo-it.RpmStarter</mainClass>
+                    <mainClass>eu.isygoit.RpmStarter</mainClass>
                     <executable>true</executable>
                     <workingDirectory>target</workingDirectory>
                 </configuration>
