--- a/02-bu-services/75-link-management/03-link-service/pom.xml
+++ b/02-bu-services/75-link-management/03-link-service/pom.xml
@@ -9,13 +9,13 @@
 
     <groupId>eu.isygo-it.services</groupId>
     <artifactId>link-management-service</artifactId>
-    <version>1.0.261112-S1046</version>
+    <version>1.0.271124-S0916</version>
     <packaging>jar</packaging>
 
     <parent>
         <groupId>eu.isygo-it.services</groupId>
         <artifactId>service-stack-parent</artifactId>
-        <version>1.0.261112-S1046</version>
+        <version>1.0.271124-S0916</version>
     </parent>
 
     <profiles>
@@ -91,27 +91,27 @@
         <dependency>
             <groupId>eu.isygo-it.services</groupId>
             <artifactId>link-management-jpa</artifactId>
-            <version>1.0.261112-S1046</version>
+            <version>1.0.271124-S0916</version>
         </dependency>
         <dependency>
             <groupId>eu.isygo-it.services</groupId>
             <artifactId>blog-management-jpa</artifactId>
-            <version>1.0.261112-S1046</version>
+            <version>1.0.271124-S0916</version>
         </dependency>
         <dependency>
             <groupId>eu.isygo-it.services</groupId>
             <artifactId>link-management-shared</artifactId>
-            <version>1.0.261112-S1046</version>
+            <version>1.0.271124-S0916</version>
         </dependency>
         <dependency>
             <groupId>eu.isygo-it.services</groupId>
             <artifactId>identity-management-shared</artifactId>
-            <version>1.0.261112-S1046</version>
+            <version>1.0.271124-S0916</version>
         </dependency>
         <dependency>
             <groupId>eu.isygo-it.services</groupId>
             <artifactId>service-stack-web</artifactId>
-            <version>1.0.261112-S1046</version>
+            <version>1.0.271124-S0916</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -121,23 +121,23 @@
         <dependency>
             <groupId>eu.isygo-it.services</groupId>
             <artifactId>key-management-shared</artifactId>
-            <version>1.0.261112-S1046</version>
+            <version>1.0.271124-S0916</version>
         </dependency>
         <dependency>
             <groupId>eu.isygo-it.services</groupId>
             <artifactId>document-management-shared</artifactId>
-            <version>1.0.261112-S1046</version>
+            <version>1.0.271124-S0916</version>
         </dependency>
         <dependency>
             <groupId>eu.isygo-it.services</groupId>
             <artifactId>messaging-management-shared</artifactId>
-            <version>1.0.261112-S1046</version>
+            <version>1.0.271124-S0916</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>eu.isygo-it.services</groupId>
             <artifactId>calendar-management-shared</artifactId>
-            <version>1.0.261112-S1046</version>
+            <version>1.0.271124-S0916</version>
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/org.springframework.statemachine/spring-statemachine-core -->
@@ -212,7 +212,7 @@
                         <manifest>
                             <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
                             <addClasspath>true</addClasspath>
-                            <mainClass>eu.isygo-it.LinkStarter</mainClass>
+                            <mainClass>eu.isygoit.LinkStarter</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
@@ -223,7 +223,7 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <version>3.2.1</version>
                 <configuration>
-                    <mainClass>eu.isygo-it.LinkStarter</mainClass>
+                    <mainClass>eu.isygoit.LinkStarter</mainClass>
                     <executable>true</executable>
                     <workingDirectory>target</workingDirectory>
                 </configuration>
