--- a/02-bu-services/80-human-resources-management/pom.xml
+++ b/02-bu-services/80-human-resources-management/pom.xml
@@ -9,14 +9,14 @@
 
     <groupId>eu.isygo-it.services</groupId>
     <artifactId>human-resources-management</artifactId>
-    <version>1.0.261112-S1046</version>
+    <version>1.0.271124-S0916</version>
 
     <packaging>pom</packaging>
 
     <parent>
         <groupId>eu.isygo-it.services</groupId>
         <artifactId>bu-services</artifactId>
-        <version>SK-1.0.261112-S1046</version>
+        <version>WB-1.0.271124-S0916</version>
     </parent>
 
     <modules>
