--- a/02-bu-services/70-recruitment-management/pom.xml
+++ b/02-bu-services/70-recruitment-management/pom.xml
@@ -9,7 +9,7 @@
 
     <groupId>eu.isygo-it.services</groupId>
     <artifactId>recruitment-management</artifactId>
-    <version>1.0.271124-S0916</version>
+    <version>WB-1.0.271124-S0916</version>
 
     <packaging>pom</packaging>
 
