--- a/02-bu-services/99-data-integration/03-integration-service/pom.xml
+++ b/02-bu-services/99-data-integration/03-integration-service/pom.xml
@@ -9,13 +9,13 @@
 
     <groupId>eu.isygo-it.services</groupId>
     <artifactId>data-integration-service</artifactId>
-    <version>1.0.271124-S0916</version>
+    <version>WB-1.0.271124-S0916</version>
     <packaging>jar</packaging>
 
     <parent>
         <groupId>eu.isygo-it.services</groupId>
         <artifactId>service-stack-parent</artifactId>
-        <version>1.0.271124-S0916</version>
+        <version>WS-1.0.271124-S0916</version>
     </parent>
 
     <profiles>
@@ -91,17 +91,17 @@
         <dependency>
             <groupId>eu.isygo-it.services</groupId>
             <artifactId>data-integration-jpa</artifactId>
-            <version>1.0.271124-S0916</version>
+            <version>WB-1.0.271124-S0916</version>
         </dependency>
         <dependency>
             <groupId>eu.isygo-it.services</groupId>
             <artifactId>data-integration-shared</artifactId>
-            <version>1.0.271124-S0916</version>
+            <version>WB-1.0.271124-S0916</version>
         </dependency>
         <dependency>
             <groupId>eu.isygo-it.services</groupId>
             <artifactId>service-stack-web</artifactId>
-            <version>1.0.271124-S0916</version>
+            <version>WS-1.0.271124-S0916</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -111,28 +111,32 @@
         <dependency>
             <groupId>eu.isygo-it.services</groupId>
             <artifactId>key-management-shared</artifactId>
-            <version>1.0.271124-S0916</version>
+            <version>WC-1.0.271124-S0916</version>
+            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>eu.isygo-it.services</groupId>
             <artifactId>document-management-shared</artifactId>
-            <version>1.0.271124-S0916</version>
+            <version>WC-1.0.271124-S0916</version>
+            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>eu.isygo-it.services</groupId>
             <artifactId>identity-management-shared</artifactId>
-            <version>1.0.271124-S0916</version>
+            <version>WC-1.0.271124-S0916</version>
+            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>eu.isygo-it.services</groupId>
             <artifactId>messaging-management-shared</artifactId>
-            <version>1.0.271124-S0916</version>
+            <version>WC-1.0.271124-S0916</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>eu.isygo-it.services</groupId>
             <artifactId>calendar-management-shared</artifactId>
-            <version>1.0.271124-S0916</version>
+            <version>WC-1.0.271124-S0916</version>
+            <scope>compile</scope>
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/org.springframework.statemachine/spring-statemachine-core -->
