--- a/10-docker-compose/cloud/cloud-docker-compose.yml
+++ b/10-docker-compose/cloud/cloud-docker-compose.yml
@@ -7,28 +7,51 @@ services:
     ports:
       - "8088:8088"
     restart: unless-stopped
+    healthcheck:
+      test: ls -la
+      interval: 4s
+      timeout: 2s
+      retries: 3
     volumes:
       - /c/docker/volumes/cloud/config-data:/config
+    networks:
+      - cloud-net
 
   discovery-service:
     container_name: discovery-service
     image: cloud/discovery-serv:latest
     depends_on:
-      - config-service
+      config-service:
+        condition: service_healthy
     ports:
       - "8061:8061"
     restart: unless-stopped
+    healthcheck:
+      test: ls -la
+      interval: 4s
+      timeout: 2s
+      retries: 3
     volumes:
       - /c/docker/volumes/cloud/discovery-data:/discovery
+    networks:
+      - cloud-net
 
-#  gateway-service:
-#    container_name: gateway-service
-#    image: cloud/gateway-serv:latest
-#    depends_on:
-#      - config-service
-#      - discovery-service
-#    ports:
-#      - "8060:8060"
-#    restart: unless-stopped
-#    volumes:
-#      - /c/docker/volumes/cloud/gateway-data:/gateway
+  gateway-service:
+    container_name: gateway-service
+    image: cloud/gateway-serv:latest
+    depends_on:
+      config-service:
+        condition: service_healthy
+      discovery-service:
+        condition: service_healthy
+    ports:
+      - "8060:8060"
+    restart: unless-stopped
+    volumes:
+      - /c/docker/volumes/cloud/gateway-data:/gateway
+    networks:
+      - cloud-net
+
+networks:
+  cloud-net:
+    driver: bridge
