--- a/10-docker-compose/tools/cassandra-docker-compose.yml
+++ b/10-docker-compose/tools/cassandra-docker-compose.yml
@@ -12,6 +12,12 @@ services:
       - CASSANDRA_PASSWORD=admin
     volumes:
       - /c/docker/volumes/cassandra-data:/var/lib/docker/volumes/cassandra
+    networks:
+      - tools-net
 
 volumes:
   cassandra-data:
+
+networks:
+  tools-net:
+    driver: bridge
