--- a/10-docker-compose/tools/kafka-docker-compose.yml
+++ b/10-docker-compose/tools/kafka-docker-compose.yml
@@ -14,6 +14,8 @@ services:
       ZOOKEEPER_TICK_TIME: 2000
     volumes:
       - /c/docker/volumes/zookeeper-data:/var/lib/docker/volumes/zookeeper
+    networks:
+      - tools-net
 
   kafka:
     container_name: kafka
@@ -27,13 +29,19 @@ services:
     environment:
       KAFKA_BROKER_ID: 1
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://localhost:9092,PLAINTEXT_HOST://localhost:29092
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092,PLAINTEXT_HOST://kafka:29092
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
       KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
     volumes:
       - /c/docker/volumes/kafka-data:/var/lib/docker/volumes/kafka
+    networks:
+      - tools-net
 
 volumes:
   zookeeper-data:
   kafka-data:
+
+networks:
+  tools-net:
+    driver: bridge
