--- a/10-docker-compose/tools/postgres-docker-compose.yml
+++ b/10-docker-compose/tools/postgres-docker-compose.yml
@@ -16,6 +16,8 @@ services:
       POSTGRES_DB: postgres
     volumes:
       - postgres-data:/var/lib/docker/volumes/postgresql/data
+    networks:
+      - tools-net
 
   pgadmin:
     container_name: pgadmin
@@ -30,7 +32,13 @@ services:
     environment:
       PGADMIN_DEFAULT_EMAIL: s.mbarki@isygoit.eu
       PGADMIN_DEFAULT_PASSWORD: root
+    networks:
+      - tools-net
 
 volumes:
   postgres-data:
   pgadmin-data:
+
+networks:
+  tools-net:
+    driver: bridge
