--- a/02-bu-services/99-data-integration/pom.xml
+++ b/02-bu-services/99-data-integration/pom.xml
@@ -9,14 +9,14 @@
 
     <groupId>eu.isygo-it.services</groupId>
     <artifactId>data-integration</artifactId>
-    <version>WB-1.0.271124-S0916</version>
+    <version>WB-1.0.220125-S0441</version>
 
     <packaging>pom</packaging>
 
     <parent>
         <groupId>eu.isygo-it.services</groupId>
-        <artifactId>web-app-microservices</artifactId>
-        <version>WB-1.0.271124-S0916</version>
+        <artifactId>bu-services</artifactId>
+        <version>WB-1.0.220125-S0441</version>
     </parent>
 
     <modules>
