up version to 1.0.250516-T0922

--- a/02-bu-services/85-project-management/03-pms-service/pom.xml
+++ b/02-bu-services/85-project-management/03-pms-service/pom.xml
@@ -9,13 +9,13 @@
 
     <groupId>eu.isygo-it.services</groupId>
     <artifactId>project-management-service</artifactId>
-    <version>WB-1.0.220125-S0441</version>
+    <version>WB-1.0.250516-T0922</version>
     <packaging>jar</packaging>
 
     <parent>
         <groupId>eu.isygo-it.services</groupId>
         <artifactId>service-stack-parent</artifactId>
-        <version>WS-1.0.220125-S0441</version>
+        <version>WS-1.0.250516-T0922</version>
     </parent>
 
     <profiles>
@@ -91,46 +91,46 @@
         <dependency>
             <groupId>eu.isygo-it.services</groupId>
             <artifactId>project-management-jpa</artifactId>
-            <version>WB-1.0.220125-S0441</version>
+            <version>WB-1.0.250516-T0922</version>
         </dependency>
         <dependency>
             <groupId>eu.isygo-it.services</groupId>
             <artifactId>project-management-shared</artifactId>
-            <version>WB-1.0.220125-S0441</version>
+            <version>WB-1.0.250516-T0922</version>
         </dependency>
         <dependency>
             <groupId>eu.isygo-it.services</groupId>
             <artifactId>service-stack-web</artifactId>
-            <version>WS-1.0.220125-S0441</version>
+            <version>WS-1.0.250516-T0922</version>
         </dependency>
         <dependency>
             <groupId>eu.isygo-it.services</groupId>
             <artifactId>key-management-shared</artifactId>
-            <version>WC-1.0.220125-S0441</version>
+            <version>WC-1.0.250516-T0922</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>eu.isygo-it.services</groupId>
             <artifactId>document-management-shared</artifactId>
-            <version>WC-1.0.220125-S0441</version>
+            <version>WC-1.0.250516-T0922</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>eu.isygo-it.services</groupId>
             <artifactId>messaging-management-shared</artifactId>
-            <version>WC-1.0.220125-S0441</version>
+            <version>WC-1.0.250516-T0922</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>eu.isygo-it.services</groupId>
             <artifactId>calendar-management-shared</artifactId>
-            <version>WC-1.0.220125-S0441</version>
+            <version>WC-1.0.250516-T0922</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>eu.isygo-it.services</groupId>
             <artifactId>identity-management-shared</artifactId>
-            <version>WC-1.0.220125-S0441</version>
+            <version>WC-1.0.250516-T0922</version>
             <scope>compile</scope>
         </dependency>
         <!-- https://mvnrepository.com/artifact/org.springframework.statemachine/spring-statemachine-core -->
