--- a/01-wams-services/30-messaging-management/04-mms-service/pom.xml
+++ b/01-wams-services/30-messaging-management/04-mms-service/pom.xml
@@ -9,13 +9,13 @@
 
     <groupId>eu.isygo-it.services</groupId>
     <artifactId>messaging-management-service</artifactId>
-    <version>WB-1.0.220125-S0441</version>
+    <version>WB-1.0.250516-T0922</version>
     <packaging>jar</packaging>
 
     <parent>
         <groupId>eu.isygo-it.services</groupId>
         <artifactId>service-stack-parent</artifactId>
-        <version>WS-1.0.220125-S0441</version>
+        <version>WS-1.0.250516-T0922</version>
     </parent>
 
     <profiles>
@@ -65,7 +65,7 @@
             <dependency>
                 <groupId>eu.isygo-it.services</groupId>
                 <artifactId>messaging-management-starter-parent</artifactId>
-                <version>WC-1.0.220125-S0441</version>
+                <version>WC-1.0.250516-T0922</version>
                 <scope>compile</scope>
             </dependency>
         </dependencies>
@@ -75,7 +75,7 @@
         <dependency>
             <groupId>eu.isygo-it.services</groupId>
             <artifactId>messaging-management-starter-parent</artifactId>
-            <version>WC-1.0.220125-S0441</version>
+            <version>WC-1.0.250516-T0922</version>
             <scope>compile</scope>
         </dependency>
     </dependencies>
