--- a/01-wams-services/pom.xml
+++ b/01-wams-services/pom.xml
@@ -9,13 +9,13 @@
 
     <groupId>eu.isygo-it.services</groupId>
     <artifactId>wams-services</artifactId>
-    <version>WB-1.0.220125-S0441</version>
+    <version>WB-1.0.250516-T0922</version>
     <packaging>pom</packaging>
 
     <parent>
         <groupId>eu.isygo-it.services</groupId>
         <artifactId>web-app-microservices</artifactId>
-        <version>WB-1.0.220125-S0441</version>
+        <version>WB-1.0.250516-T0922</version>
     </parent>
 
     <properties>
