--- a/02-bu-services/70-recruitment-management/02-rpm-shared/pom.xml
+++ b/02-bu-services/70-recruitment-management/02-rpm-shared/pom.xml
@@ -11,7 +11,7 @@
 
     <groupId>eu.isygo-it.services</groupId>
     <artifactId>recruitment-management-shared</artifactId>
-    <version>WB-1.0.220125-S0441</version>
+    <version>WB-1.0.250516-T0922</version>
     <packaging>jar</packaging>
     <name>recruitment-management-shared</name>
     <description>recruitment-management-shared</description>
@@ -19,7 +19,7 @@
     <parent>
         <groupId>eu.isygo-it.services</groupId>
         <artifactId>recruitment-management</artifactId>
-        <version>WB-1.0.220125-S0441</version>
+        <version>WB-1.0.250516-T0922</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
@@ -30,7 +30,7 @@
         <dependency>
             <groupId>eu.isygo-it.services</groupId>
             <artifactId>service-stack-shared</artifactId>
-            <version>WS-1.0.220125-S0441</version>
+            <version>WS-1.0.250516-T0922</version>
         </dependency>
     </dependencies>
 
